--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -10,11 +10,12 @@
     padding: 18px 35px;
     height: 64px;
     border-radius: 5px;
-    background-color:blue ;
+    background-color: #fa8d3f ;
 }
 .text-primary{
-    color: blue;
+    color:#f78e43 ;
 }
+
 
 
 /* header and navigition styles  */
@@ -74,7 +75,7 @@ main{
 /* about section style */
 .about{
     margin-top: 130px;
-    background: #fab07c;
+    background: #e78036;
     border-radius: 10px;
     padding: 130px 150px;
 }
@@ -82,7 +83,7 @@ main{
     text-align: center;
     font-size: 35px;
     font-weight: 700;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 .section-description{
     color: #746f6f;
@@ -96,7 +97,7 @@ main{
 }
 .about .info-title{
     font-size: 20px;
-    color: #746f6f;;
+    color: #746f6f;
 }
 .info-description{
     font-weight: 700;
@@ -112,7 +113,7 @@ main{
     gap:24px;
 }
 .skill{
-    background: #fab07c;
+    background: #e77422;
     box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
     border-radius: 5px;
     padding: 30px;
@@ -127,5 +128,35 @@ main{
     color: #746f6f;
 }
 
-
+.Resume{
+    margin-top: 130px;
+}
+/* Resume-Stylrs */
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+.resume-items{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume-title{
+    color: #692424;
+    font-weight: 700;
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+.resume-sub-title{
+    color: #746f6f;
+    font-weight: 600; 
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.resume-info-description{
+    color: #746f6f;
+}
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
+}
 
