--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -71,7 +71,7 @@ main {
 /* about section style */
 .about {
   margin-top: 130px;
-  background: #ec9353;
+  background:#f5b281 ;
   border-radius: 10px;
   padding: 130px 150px;
 }
@@ -109,7 +109,7 @@ main {
   gap: 24px;
 }
 .skill {
-  background: #f09859;
+  background: #f5b281;
   box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
   border-radius: 5px;
   padding: 30px;
@@ -159,17 +159,17 @@ main {
 /* contact styles */
 .contact {
   display: flex;
-  background-color: #f09859;
+  background-color: #f5b281;
   gap: 100px;
   padding: 130px 200px;
 }
 .contact-section-title {
+  text-align: left;
   font-weight: 700;
   font-size: 25px;
   margin-bottom: 10px;
 }
-.contact input,
-textarea {
+.contact input[type="text"], input[type="email"], textarea {
   margin-bottom: 24px;
   border: 0;
   width: 100%;
@@ -181,4 +181,7 @@ input {
 
 .contact-section-area {
   background-color: #f09859;
+}
+.contact a{
+    text-decoration: none;
 }
